--- a/ERPWeb/Views/AgroConfiguration/CreateRawMaterialIssueStock.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRawMaterialIssueStock.cshtml
@@ -28,7 +28,7 @@
                     <div class="col-md-2">
                         <label for="ddlOrganizationName" class="control-label">Organization Name</label>
 
-                        @Html.DropDownList("ddlOrganization", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "--Select Organization--", new { @class = "form-control form-control-sm" })
+                        @Html.DropDownList("ddlOrganization", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "--Select Organization--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                         <span class="error hide required-ddlOrganization font-weight-bold">Organization Name is Required</span>
                     </div>
@@ -42,7 +42,7 @@
                     <div class="col-md-2">
                         <label for="ddlRawMaterialName" class="control-label">Raw Material Name</label>
 
-                        @Html.DropDownList("ddlRawMaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterialName, "--Select Material--", new { @class = "form-control form-control-sm" })
+                        @Html.DropDownList("ddlRawMaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterialName, "--Select Material--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                         <span class="error hide required-RawMaterialName font-weight-bold">RawMaterial Name is Required</span>
                     </div>
@@ -158,6 +158,14 @@
         var RawMaterialStockUnit = $("#RawMaterialStockUnit");
         var materialNameList = [];
 
+        $(document).ready(function () {
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+        })
 
         ddlRawMaterialName.change(function () {
             debugger;
