--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
@@ -66,7 +66,7 @@
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
-                            @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm" })
+                            @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             <span class="error hide required-organizatinName font-weight-bold">Input OrganizatinName!</span>
                             <span class="error hide duplicate-organizatinName font-weight-bold">Already OrganizatinName Exist!</span>
                         </div>
@@ -128,6 +128,12 @@
         var ddlAddress = $("#ddlAddress");
 
         $(document).ready(function () {
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
             LoadProductSupplierDataTable()
         })
         function LoadDataInitializer() {
