--- a/ERPWeb/Views/AgroConfiguration/GetBankList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetBankList.cshtml
@@ -62,37 +62,38 @@
                 <form id="bankForm">
                     <input type="hidden" id="hiddenBankId" />
                     <div class="form-row">
-                        <div class="form-row">
+                        <div class="form-group col-md-12">
+
                             <label for="ddlOrganizationName" class="control-label">Organization Name</label>
                             @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "--Select OrgName--", new { @class = "form-control form-control-sm" })
                             <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
                         </div>
-                        <div class="form-row">
+                        <div class="form-group col-md-12">
                             <label for="ddlBankName" class="control-label">Bank Name</label>
                             <input type="text" id="ddlBankName" class="form-control form-control-sm" />
                             <span class="error hide required-BankName font-weight-bold">Input Bank Name!</span>
 
                         </div>
-                        <div class="form-row">
+                        <div class="form-group col-md-12">
                             <label for="ddlAccountNumber" class="control-label">Account Number</label>
                             <input type="text" id="ddlAccountNumber" class="form-control form-control-sm" />
                             <span class="error hide required-AccountNumber font-weight-bold">Input AccountNumber!</span>
 
                         </div>
-                        <div class="form-row">
+                        <div class="form-group col-md-12">
                             <label for="ddlMobileNumber" class="control-label">Mobile Number</label>
                             <input type="text" id="ddlMobileNumber" class="form-control form-control-sm" />
                             <span class="error hide required-MobileNumber font-weight-bold">Input Mobile Number!</span>
 
                         </div>
-                        <div class="form-row">
+                        <div class="form-group col-md-12">
                             <label for="ddlEmailAddress" class="control-label">Email Address</label>
                             <input type="text" id="ddlEmailAddress" class="form-control form-control-sm" />
                             <span class="error hide required-EmailAddress font-weight-bold">Input Email Address!</span>
 
                         </div>
 
-                        <div class="form-row col-6">
+                        <div class="form-group col-md-12">
                             <label for="ddlStatus" class="control-label">Status</label>
                             <select class="form-control form-control-sm" id="ddlStatus">
                                 <option value="Active">Active</option>
