--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -102,13 +102,13 @@
                                         </div>
                                         <div class="col-md-3">
                                             <label class="control-label" for="ddlProduct">Product</label>
-                                            @Html.DropDownList("ddlProduct", (IEnumerable<SelectListItem>)ViewBag.ddlProduct, new { @class = "form-control form-control-sm" })
+                                            @Html.DropDownList("ddlProduct", (IEnumerable<SelectListItem>)ViewBag.ddlProduct, new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                                             <span class="error hide req-ddlProduct">Product Name is Required</span>
                                         </div>
                                         <div class="col-md-3">
                                             <label class="control-label" for="ddlReceipBatchCode">BatchCode</label>
-                                            @Html.DropDownList("ddlReceipBatchCode",(IEnumerable<SelectListItem>)ViewBag.ddlReceipBatchCode,"--Select Batch--",new {@class= " form-control form-control-sm select2" })
+                                            @Html.DropDownList("ddlReceipBatchCode",(IEnumerable<SelectListItem>)ViewBag.ddlReceipBatchCode,"--Select Batch--",new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                             <span class="error hide req-ddlReceipBatchCode">Batch Code Is Required</span>
 
                                         </div>
@@ -181,6 +181,15 @@
         var ddlProduct = $("#ddlProduct");
         var qty = $("#qty");
         var targetQty = $("#targetQty");
+
+        $(document).ready(function () {
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+        })
 
         ddlProduct.change(function () {
 
