--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -58,7 +58,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-12 text-sm text-sm" id="dataContainer" style="overflow-y:scroll">
-                                            <h4>Loading List</h4>
+                                           @{Html.RenderAction("GetProductFinishGoodList", new { @flag = "Initial" });}
                                         </div>
                                     </div>
                                 </div>
@@ -191,6 +191,7 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+            $("#btnSubmit").hide();
         })
 
    
@@ -251,6 +252,8 @@
                         var td4 = "<td>" + (value.FGRRawMaterQty * targetQty.val()) + "</td>";
                         var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + "</tr>";
                         $("#tblFinishGoodProduction tbody").append(tr)
+                        $("#btnSubmit").show();
+
 
                     })
 
@@ -287,6 +290,10 @@
             var data = JSON.stringify({ info: finishGoodProduction, details: details })
             $.when(postReqWithToken(dataType.applicationJson, dataType.json, type.post, "/AgroConfiguration/SaveFinishGoodProduction", data, getToken())).then(function (res, status) {
                 if (status == "success") {
+                    $('.toastrDefaultSuccess').trigger('click');
+                     setTimeout(function () {
+                        redirectPage('@Url.Action("GetProductFinishGoodList")');
+                    }, 1000);
 
 
                 }
@@ -294,14 +301,16 @@
 
             }).fail(function (error) {
 
-                console.log(error)
+                alert(execuStatus.fail);
             })
 
         });
        
   
 
-  
+        function redirectPage(page) {
+            window.location.replace(page);
+        }
 
 
     </script>
