--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockDetail.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockDetail.cshtml
@@ -29,6 +29,7 @@
             <th>Quantity</th>
             <th>Unit</th>
             <th>Status</th>
+            <th>Entry Date</th>
 
         </tr>
     </thead>
@@ -42,6 +43,7 @@
             <td class="text-center text-bold">@item.Quantity</td>
             <td class="text-center">@item.Unit</td>
             <td class="text-center">@item.Status</td>
+            <td class="text-center">@item.EntryDate</td>
 
         </tr>
         }
