--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueStockDetail.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueStockDetail.cshtml
@@ -16,6 +16,7 @@
             <td style="width:20%"><b>@info.Quantity</b></td>
             <td style="width:13%">Unit</td>
             <td style="width:20%"><b>@info.Unit</b></td>
+   
         </tr>
     }
 </table>
@@ -26,6 +27,8 @@
             <th>RawMaterial Name</th>
             <th>Quantity</th>
             <th>Unit</th>
+            <th>Status</th>
+            <th>Entry Date</th>
         </tr>
     </thead>
     <tbody>
@@ -37,6 +40,8 @@
                 <td class="text-center">@item.RawMaterialName</td>
                 <td class="text-center text-bold">@item.Quantity</td>
                 <td class="text-center">@item.Unit</td>
+                <td class="text-center">@item.Status</td>
+                <td class="text-center">@item.EntryDate</td>
 
             </tr>
         }
