--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterialStock.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterialStock.cshtml
@@ -80,7 +80,7 @@
 </div>
 
 
-<div class="modal fade" id="RawMaterialModalDetails" role="dialog" tabindex="-1" aria-hidden="true">
+@*<div class="modal fade" id="RawMaterialModalDetails" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header alert-secondary">
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 
 @section scripts{
