--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
@@ -11,10 +11,15 @@
             <th style="vertical-align:middle">#SL</th>
             <th style="vertical-align:middle" class="hide"></th>
             <th style="vertical-align:middle">Raw Material Name</th>
-            <th style="vertical-align:middle">Quantity</th>
+            @*<th style="vertical-align:middle">Quantity</th>*@
             <th style="vertical-align:middle">Unit</th>
-            <th style="vertical-align:middle">ExpireDate</th>
-            <th style="vertical-align:middle">Action</th>
+            <th style="vertical-align:middle">StockDate</th>
+            <th style="vertical-align:middle">StockIn</th>
+            <th style="vertical-align:middle">StockOut</th>
+            <th style="vertical-align:middle">Current Stock</th>
+            <th style="vertical-align:middle">Status</th>
+            <th style="vertical-align:middle">Expire Date</th>
+            @*<th style="vertical-align:middle">Action</th>*@
         </tr>
     </thead>
     <tbody>
@@ -25,11 +30,16 @@
                 <td class="text-center text-bold">@sl</td>
                 <td class="hide">@item.RawMaterialStockId</td>
                 <td class="text-center">@item.RawMaterialName</td>
-                <td class="text-center">@item.Quantity</td>
+                @*<td class="text-center">@item.Quantity</td>*@
                 <td class="text-center">@item.Unit</td>
+                <td class="text-center">@item.StockDate</td>
+                <td class="text-center">@item.StockIn</td>
+                <td class="text-center">@item.StockOut</td>
+                <td class="text-center">@item.TotalStock</td>
+                <td class="text-center">@item.Status</td>
                 <td class="text-center">@item.ExpireDate</td>
 
-                <td class="text-center">
+                @*<td class="text-center">
                    
                     <a href="#" class="btn btn-outline-secondary data-item-detail" title="View Detail" data-item-detail="@item.RawMaterialStockId" style="line-height:1">
                         <i class="fas fa-eye"></i>
@@ -44,7 +54,7 @@
                     </a>
                    
 
-                </td>
+                </td>*@
             </tr>
         }
         
