--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -76,6 +76,7 @@
                             <div class="col-md-3">
                                 <label for="ddlRawMaterial" class="col-form-label">Product Unit</label>
                                 @Html.DropDownList("ddlRawMaterialunit", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterialunit, "--Select RawMaterial unit--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                @*<input type="text" id="ddlRawMaterialunit" name="ddlRawMaterialunit" class="form-control form-control-sm" readonly />*@
                                 <span class="error hide req-preparation text-bold">Unit is required</span>
                             </div>
                             @*<div class="col-md-3">
@@ -180,7 +181,20 @@
             });
         })
 
+        //ddlRawMaterialName.change(function () {
+        //    debugger;
 
+        //    var data = { RawMaterialId: ddlRawMaterialName.val() };
+
+        //    $.when(getReqWithData('Html', "Get", "/AgroConfiguration/GetRawMaterialIssueStockLoadUnit", data)).then(function (res, status) {
+        //        // debugger;
+        //        consoleLog(res.replace(/['"]+/g, ''));
+        //        var unit = res.replace(/['"]+/g, '');
+        //        ddlUnit.val(unit);
+        //        //targetQty.val();
+        //    });
+
+        //})
         var rawMetarialList = [];
 
         $("#btnAddToList").click(function (e) {
